@@ -69,9 +69,9 @@ building GDB vis:
 i[3456]86-*-linux*
 ------------------
 
-gdb/660: gdb does not build with linux libc5.  The symptom is a parse
-error before `uintptr_t'.  Upgrade to glibc 2.1.3 or later, which
-defines uintptr_t.
+gdb/660: gdb does not build with GNU/Linux libc5.  The symptom is a
+parse error before `uintptr_t' or an error message about `uintptr_t'.
+Upgrade to glibc 2.1.3 or later, which defines uintptr_t.
 
 gdb/1030: GNU binutils 2.12.1 and earlier versions do not work properly
 with gdb.  If you use GNU binutils, upgrade to version 2.13 or later.
