@@ -1,3 +1,10 @@
+2003-02-26  Michael Chastain  <mec@shout.net>
+
+	Close PR build/660.
+	* PROBLEMS (i[3456]86-*-linux*): Note explicit error message
+	for old libc5/glibc.
+	* gdb_thread_db.h: Die if not HAVE_UINTPTR_T.
+
 2003-02-26  Kris Warkentin  <kewarken@qnx.com>
 
 	* defs.h (gdb_osabi): Add GDB_OSABI_QNXNTO.
